added new MAVEN_OPTS